# contexting

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
bindings/js/: Cargo.toml  package.json
bindings/js/src/: lib.rs
bindings/python/: Cargo.toml  README.md  latest.whl  pyproject.toml
bindings/python/src/: lib.rs
examples/: package-lock.json  package.json  systemPromptBuilder.ts  userLanguageLiking.ts
js_depr/: README.md  package-lock.json  package.json  sage.json  tsconfig.json
js_depr/src/: assemble.ts  index.ts  injector.ts  slot.ts  types.ts
src/: assemble.rs  injector.rs  lib.rs  slot.rs  types.rs
