[workspace]
resolver = "2"
members = [".", "bindings/python", "bindings/js"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "contexting-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde_json = "1"
regex = "1"
once_cell = "1"
thiserror = "1"

[lib]
name = "contexting_core"

[profile.release]
opt-level = "s"
lto = true
