[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "contexting"
dynamic = ["version"]
description = "Template-based prompt assembly with ordered slot injectors"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "contexting"
manifest-path = "Cargo.toml"
